components/Image/Image.css
@keyframes fading {
  0% {
    opacity: 0.1;
  }

  50% {
    opacity: 0.2;
  }

  100% {
    opacity: 0.1;
  }
}

.ztopia-image {
  position: relative;
  overflow: hidden;

  &--normal {
    margin: 0;
    opacity: 1;
    transition: $transition-slow;

    &.is-loading {
      opacity: 0.5;
      filter: blur(5px);
    }
  }

  /* https://stackoverflow.com/questions/11447707/div-container-larger-than-image-inside */
  &__img {
    display: block;
    width: 100%;
    height: 100%;

    &--background {
      background-position: center center;
      background-size: cover;
    }
  }

  &__placeholder {
    background-color: $black-dark;
    animation: fading 1.5s infinite;
  }

  &__caption {
    position: absolute;
    top: $spacing-l;
    left: $spacing-l;
    z-index: 1;
  }

  &__mask {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

